<resources>
    <string name="app_name">LiveTv</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_pass">Pass</string>
    <string name="label_surname">Surname</string>
    <string name="label_phone">Phone</string>
    <string name="label_create_account">Create \nAccount</string>
    <string name="label_welcome">Welcome</string>

    <string name="snack_txt_form">Please fill the  %1$s field in the correct way !</string>
    <string name="snack_no_internet">No internet connection !</string>
    <string name="snack_something_wrong">Something went wrong !</string>
    <string name="test_text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim.</string>


    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="live">Live</string>



</resources>