<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="formViewModel"
            type="com.gprifti.livetv.ui.register.form.FormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background_form">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_create_account"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.97" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_pass"
            app:layout_constraintEnd_toEndOf="@+id/txt_username"
            app:layout_constraintStart_toStartOf="@+id/txt_username"
            app:layout_constraintTop_toBottomOf="@+id/txt_username" />

        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_surname"
            app:layout_constraintEnd_toEndOf="@+id/txt_email"
            app:layout_constraintStart_toStartOf="@+id/txt_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <EditText
            android:id="@+id/txt_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_phone"
            app:layout_constraintEnd_toEndOf="@+id/txt_pass"
            app:layout_constraintStart_toStartOf="@+id/txt_pass"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/white"
            android:inputType="phone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/txt_surname"
            app:layout_constraintStart_toStartOf="@+id/txt_surname"
            app:layout_constraintTop_toBottomOf="@+id/txt_surname" />

        <Button
            android:id="@+id/next_form_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ic_next_button"
            android:onClick="@{() -> formViewModel.clickNextButtonForm(txtUsername.getText().toString(),txtEmail.getText().toString(),txtPass.getText().toString(),txtSurname.getText().toString(),txtPhone.getText().toString())}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/label_username"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_username"
            app:layout_constraintStart_toStartOf="@+id/txt_username" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/label_email"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_email"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/label_pass"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_pass"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/label_surname"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_surname"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/label_phone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_phone"
            app:layout_constraintStart_toStartOf="@+id/txt_phone" />

        <ImageView
            android:id="@+id/img_back_bt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> formViewModel.backButton(true)}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.05"
            app:srcCompat="@drawable/ic_backarrow" />

        <include
            android:id="@+id/includedLayoutView"
            layout="@layout/view_black"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <include
            android:id="@+id/includedLayoutLoader"
            layout="@layout/loader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>